<resources>
    <string name="app_name">to do list app</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_subtext">Please enter your details to sign in</string>
    <string name="label_email">EMAIL</string>
    <string name="label_password">PASSWORD</string>
    <string name="hint_email">name@example.com</string>
    <string name="no_account">no account</string>
    <string name="sign_in_subtitle">sing in</string>
    <string name="hint_password">••••••••</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_login">Login</string>
    <string name="signup_text">Don\'t have an account? Sign up</string>
    <string name="my_tasks">My Tasks</string>
    <string name="current_date">Monday, Oct 24</string>
    <string name="catching_up">You\'re catching up well</string>
    <string name="new_task_title">New Task</string>
    <string name="cancel">Cancel</string>
    <string name="task_prompt">What\'s on\nyour mind?</string>
    <string name="hint_task_title">Enter task title...</string>
    <string name="attach_image">ATTACH IMAGE</string>
    <string name="record_audio">RECORD AUDIO</string>
    <string name="set_deadline">SET DEADLINE</string>
    <string name="btn_save_task">Save Task</string>
    <string name="Login">Login</string>
    <string name="AskingForAccount">Don\'t have an account? Sign up</string>
    <string name="Forgot">Forgot password?</string>
    <string name="hiddenStars">******</string>
    <string name="PasswordLabel">Password</string>
    <string name="HintEmail">abcd@gmail.com</string>
    <string name="Email">E-mail</string>
    <string name="Welcome">Welcome Back</string>
    <string name="LogoDesc">A logo</string>
    <string name="Tasks">Tasks</string>
    <string name="MyTasks">MyTasks</string>
    <string name="MyTime">MyTime</string>
    <string name="plus">+</string>
    <string name="Settingstext" />
    <string name="Settings">SettingsPage</string>
    <string name="Upcoming">UpcomingPage</string>
    <string name="Button" />
    <string name="add_task">Add Task</string>
    <string name="DarkModeText">DarkMode</string>
    <string name="DarkMode">Darkmode</string>
    <string name="SaveText">Save</string>
    <string name="Whatson">What\'s on                                                 your minde?</string>
    <string name="WhatsOn">Whats On \n  Your Mind?</string>
    <string name="newTask">NewTask</string>
    <string name="Close">Close</string>
    <string name="Desc">Desp</string>
    <string name="CloseButton">cLOSE\n</string>
</resources>